[package]
name = "undermoon"
version = "0.6.0-alpha.1"
authors = ["doyoubi"]
edition = "2018"

[[bin]]
name="server_proxy"
path="src/bin/server_proxy.rs"

[[bin]]
name="coordinator"
path="src/bin/coordinator.rs"

[[bin]]
name="mem_broker"
path="src/bin/mem_broker.rs"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
warp = { version = "0.3", features = ["compression"] }
futures = "0.3"
atomic-option = "0.1"
crc16 = "0.4.0"
crc64 = "1.0.0"
caseless = "0.2.1"
arc-swap = "0.3.11"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = "1.0"
serde_derive = "1.0.88"
serde_json = "1.0"
log = "0.4"
env_logger = "0.8.2"
scopeguard = "1.1.0"
itertools = "0.8.0"
futures-batch = "0.6.0"
config = { version = "0.10", features = ["toml"], default_features = false }
btoi = "0.4.2"
crossbeam = "0.7.1"
crossbeam-channel = "0.4"
chrono = "0.4"
atoi = "0.3.1"
zstd = "0.4"
memchr = "2.3.0"
pin-project = "0.4"
string-error = "0.1.0"
dashmap = "3.11.1"
coarsetime = "0.1"
arrayvec = "0.5.1"
either = "1.5.3"
mockall = "0.9"
backtrace = "0.3"
jemallocator = "0.3.0"
async-trait = "0.1"
derivative = "2.1.1"
flate2 = "1"
base64 = "0.13.0"
parking_lot = "0.11.1"
lazy_static = "1.4.0"

[profile.release]
debug = true
lto = true
