[package]
name = "undermoon"
version = "0.6.2-dev0"
authors = ["doyoubi"]
edition = "2018"

[[bin]]
name="server_proxy"
path="src/bin/server_proxy.rs"

[[bin]]
name="coordinator"
path="src/bin/coordinator.rs"

[[bin]]
name="mem_broker"
path="src/bin/mem_broker.rs"

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
warp = { version = "0.3", features = ["compression"] }
futures = "0.3"
atomic-option = "0.1"
crc16 = "0.4"
crc64 = "2"
caseless = "0.2"
arc-swap = "1"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
env_logger = "0.9"
scopeguard = "1"
itertools = "0.10"
futures-batch = "0.6.0"
config = { version = "0.13", features = ["toml"], default_features = false }
btoi = "0.4"
crossbeam = "0.8"
crossbeam-channel = "0.5"
chrono = "0.4"
atoi = "1"
zstd = "0.11"
memchr = "2"
pin-project = "1"
string-error = "0.1.0"
dashmap = "5"
coarsetime = "0.1"
arrayvec = "0.5"  # Need this specific version to make sure the size_of::<ArrayString> is correct.
either = "1"
mockall = "0.11"
backtrace = "0.3"
jemallocator = "0.5"
async-trait = "0.1"
derivative = "2"
flate2 = "1"
base64 = "0.13"
parking_lot = "0.12"
lazy_static = "1"

[profile.release]
debug = true
lto = true
